# libtensor

./: .clang-format  .gitignore  Makefile  README.md
docs/: todo.md
include/: libgpuc_cuda.hpp  padding.hpp
src/: conv2d.cu  cuda_interface.cu  matmul.cu  padding.cpp  reducers.cu  rowwise_stats.cu  tensor.cpp  vector.cu  vector_add.cu
src/nn2d/: conv2d.cu  maxpool2d.cu
src/rowwise/: mean2d.cu  rowwise_mean.cu  variance2d.cu
src/stat2d/: mean2d.cu  sum2d.cu  variance2d.cu
tensorc/: Makefile  for_each
tensorc/docs/: tasks.md
tensorc/include/: tensorc.h  tensorc.hpp  typed_array.hpp
tensorc/scratch/: for_each.cpp
tensorc/scripts/: common.py  ewise_binary_arith.py
tensorc/src/: mem.c
tensorc/src/ewise/: binary_arith.cpp  binary_arith_gen.inc  trignometry.cpp  unary.cpp
tensorc/src/misc/: binary_arith.cpp  mem.c  mem.cpp  typed_array.cpp
tensorc/src/stat/: stat.cpp
tensorcpu/: CMakeLists.txt  Makefile  _Makefile
tensorcpu/docs/: later.md  tasks.md
tensorcpu/include/: binaryarith.hpp  debug.hpp  macro_unwind.hpp  matrix.hpp  native.hpp  nn_activation.hpp  range.hpp  reducer.hpp  stat.hpp  tensorcpu.hpp  test_common.hpp  thread_pool.hpp  typed_array.hpp
tensorcpu/src/ewise/: binary_arith.cpp  trignometry.cpp  unary.cpp
tensorcpu/src/matrix/: mm.cpp  mmBt.cpp  mmBt_casted_slow.cpp  mmBt_slow.cpp  mm_casted_slow.cpp  mm_slow.cpp  tile.cpp
tensorcpu/src/misc/: atomic.cpp  binary_arith.cpp  cache.cpp  debug.cpp  init.cpp  mem.cpp  parallel.cpp  reducer.cpp  thread_pool.cpp  typed_array.cpp
tensorcpu/src/misc/simd/: neon.cpp  x86.cpp
tensorcpu/src/nn/activation/: sigmoid.cpp
tensorcpu/src/stat/: mean.cpp  mean2d.cpp  rwise_stat.cpp  stat.cpp  sum.cpp  sum2d.cpp  variance.cpp  variance2d.cpp
tensorcpu/test/: cast_test.cpp  dummy.cpp  dummy1.cpp  for_each.cpp  gemm_test.cpp  mmBt_test.cpp  mm_test.cpp
tensorcpu/test/ewise/: abs_test.cpp  binary_arith_test.cpp  cast_test.cpp  neg_test.cpp
tensorcpu/test/matrix/: mmBt_test.cpp  mm_test.cpp
tensorcpu/test/nn/activation/: sigmoid_test.cpp
tensorcpu/test/stat/: mean2d_test.cpp  mean_test.cpp  sum2d_test.cpp  sum_test.cpp  variance2d_test.cpp  variance_test.cpp
tensorcpu/test_bench/ewise/: plus_bench.cpp
tensorcpu/test_bench/nn/activation/: sigmoid_bench.cpp
tensorcpu/test_bench/stat/: mean2d_bench.cpp  mean_bench.cpp  sum2d_bench.cpp  sum_bench.cpp  sum_test.cpp  variance2d_bench.cpp  variance_bench.cpp
tensorcpu/test_python/: benchmark_add.py  benchmark_mean.py  benchmark_sum.py  install.sh  requirements.txt
tensorcpu/test_python/nn/activation/: sigmoid.py
tensorcuda/: CMakeLists.txt  Makefile  Makefile_
tensorcuda/cmake/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
tensorcuda/cmake/.cmake/api/v1/reply/: cache-v2-ec2e1f073dddbda3f6a3.json  cmakeFiles-v1-ba1e776864b246a214f9.json  codemodel-v2-280ccc01f85ca36b62df.json  index-2024-04-08T20-13-32-0167.json  target-tensorcuda-Debug-f025b853d3205b1e270c.json  toolchains-v1-5414e45959d4877d00d8.json
tensorcuda/include/: caster.hpp  libgpuc_cuda.hpp  padding.hpp  reducers.hpp  tensorcuda.hpp
tensorcuda/scripts/: common.py  elementwise_gen.py  ewise_arith_gen.py  ewise_scalar_arith_gen.py  ewise_unary_gen.py
tensorcuda/src/: caster.cu  cuda_interface.cu  elementwise.cu  elementwise_gen.inc  matmul.cu  reducers.cu  vector.cu
tensorcuda/src/activation/: elu.cu
tensorcuda/src/elementwise/: elementwise.cu  elementwise_trignometry.cu  ewise_binary_arith_scalar.cu
tensorcuda/src/elementwise/activation/: sigmoid.cu
tensorcuda/src/ewise/: .gitignore  elementwise_trignometry.cu  ewise_arith.cu  ewise_arith_v2.cu  ewise_binary_arith_scalar.cu  ewise_trignometry.cu  ewise_unary.cu
tensorcuda/src/ewise/activation/: elu.cu  sigmoid.cu  softplus.cu
tensorcuda/src/matrix/: addmatmul.cu  addmatmulT.cu  matmul.cu  matmulT.cu  pick_rows.cu  tranpose.cu
tensorcuda/src/nn2d/: conv2d.cu  group_norm.cu  maxpool2d.cu
tensorcuda/src/rwise/: rwise_arith.cu
tensorcuda/src/stat/: mean.cu  sum.cu  variance.cu
tensorcuda/src/stat2d/: group_norm.cu  mean2d.cu  moment2d.cu  normalize2d.cu  row_norm.cu  sum2d.cu  variance2d.cu
tensorcuda/test/: matmul_test.cpp
tensorcuda/test/nn2d/: conv2d_test.cpp  maxpool2d_test.cpp
tensorcuda/test/stat2d/: mean2d_test.cpp  sum2d_test.cpp  variance2d_test.cpp
tensorcuda/test/vector/: vector_add_test.cpp
test/: matmul_test.cpp
test/nn2d/: maxpool2d_test.cpp
test/rowwise/: rowwise_mean_test.cpp  rowwise_sum_test.cpp
test/stat2d/: mean2d_test.cpp  sum2d_test.cpp  variance2d_test.cpp
test/vector_add/: vector_add.cpp  vector_add_test.cpp
